# python-project-52

./: Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
python_project_52/: asgi.py  settings.py  urls.py  views.py  wsgi.py
task_manager/: admin.py  filters.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_label_task.py
templates/: base.html  index.html
templates/labels/: label_confirm_delete.html  label_list.html
templates/registration/: login.html
templates/statuses/: status_confirm_delete.html  status_form.html  status_list.html
templates/tasks/: task_confirm_delete.html  task_detail.html  task_list.html
templates/users/: user_confirm_delete.html  user_list.html
