[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5.2.12",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[tool.ruff]
exclude = ["migrations", "settings.py"]
